feat(member): 보호 대상 정보 추가
