# src/main/java/team/hotpotato/domain/member/application/dto/ProtectTargetIndexingPublishCommand.java
@@ -2,6 +2,7 @@ package team.hotpotato.domain.member.application.dto;
 
 public record ProtectTargetIndexingPublishCommand(
         String jobId,
-        String keyword
+        String keyword,
+        String protectTargetInfo
 ) {
 }
