# src/main/java/team/hotpotato/infrastructure/member/indexing/ProtectTargetIndexingKafkaMessage.java
@@ -5,6 +5,8 @@ import com.fasterxml.jackson.annotation.JsonProperty;
 record ProtectTargetIndexingKafkaMessage(
         @JsonProperty("job_id")
         String jobId,
-        String keyword
+        String keyword,
+        @JsonProperty("protect_target_info")
+        String protectTargetInfo
 ) {
 }
