# src/main/java/team/hotpotato/infrastructure/r2dbc/user/UserEntity.java
@@ -24,4 +24,7 @@ public class UserEntity extends BaseEntity {
 
     @Column("protect_target")
     private String protectTarget;
+
+    @Column("protect_target_info")
+    private String protectTargetInfo;
 }
